Revamp blog grid with images and new articles
Updated blog grid to include images and reorganized blog cards for better presentation.

--- a/blog.html
+++ b/blog.html
@@ -60,168 +60,184 @@
                     </div>
                 </div>
                 
-                <div class="blog-grid">
-                    <article class="blog-card" data-category="conceitos">
-                        <div class="blog-card-header">
-                            <div class="blog-icon">🔗</div>
-                            <span class="blog-category">Conceitos</span>
-                        </div>
-                        <h3 class="blog-title">
-                            <a href="logistica-integrada.html">Logística Integrada: Unindo Todos os Processos</a>
-                        </h3>
-                        <p class="blog-excerpt">Descubra como a logística integrada pode revolucionar a eficiência da sua empresa, conectando todos os processos desde a fabricação até a entrega final.</p>
-                        <div class="blog-meta">
-                            <span class="blog-date">15 de Dezembro, 2024</span>
-                            <span class="blog-read-time">5 min de leitura</span>
-                        </div>
-                        <div class="blog-tags">
-                            <span class="tag">Integração</span>
-                            <span class="tag">Eficiência</span>
-                            <span class="tag">Processos</span>
-                        </div>
-                    </article>
+                <!-- Blog Grid completo atualizado -->
+<div class="blog-grid">
+    <!-- Logística Integrada -->
+    <article class="blog-card" data-category="conceitos">
+        <img src="imagens/logistiticainte.jpeg" alt="Logística Integrada" class="blog-card-image">
+        <div class="blog-card-header">
+            <span class="blog-category">Conceitos</span>
+            <div class="blog-icon">🔗</div>
+        </div>
+        <div class="blog-card-content">
+            <h3 class="blog-title"><a href="logistica-integrada.html">Logística Integrada: Unindo Todos os Processos</a></h3>
+            <p class="blog-excerpt">Descubra como a logística integrada pode revolucionar a eficiência da sua empresa, conectando todos os processos desde a fabricação até a entrega final.</p>
+            <div class="blog-meta">
+                <span class="blog-date">15 de Dezembro, 2024</span>
+                <span class="blog-read-time">5 min de leitura</span>
+            </div>
+            <div class="blog-tags">
+                <span class="tag">Integração</span>
+                <span class="tag">Eficiência</span>
+                <span class="tag">Processos</span>
+            </div>
+        </div>
+    </article>
 
-                    <article class="blog-card" data-category="metodologias">
-                        <div class="blog-card-header">
-                            <div class="blog-icon">⏰</div>
-                            <span class="blog-category">Metodologias</span>
-                        </div>
-                        <h3 class="blog-title">
-                            <a href="just-in-time.html">Just in Time: Produção no Momento Certo</a>
-                        </h3>
-                        <p class="blog-excerpt">Entenda como o sistema JIT revolucionou a indústria mundial, reduzindo estoques e aumentando a eficiência operacional.</p>
-                        <div class="blog-meta">
-                            <span class="blog-date">12 de Dezembro, 2024</span>
-                            <span class="blog-read-time">7 min de leitura</span>
-                        </div>
-                        <div class="blog-tags">
-                            <span class="tag">JIT</span>
-                            <span class="tag">Toyota</span>
-                            <span class="tag">Estoque</span>
-                        </div>
-                    </article>
+    <!-- Just in Time -->
+    <article class="blog-card" data-category="metodologias">
+        <img src="imagens/justinintime.jpeg" alt="Just in Time" class="blog-card-image">
+        <div class="blog-card-header">
+            <span class="blog-category">Metodologias</span>
+            <div class="blog-icon">⏰</div>
+        </div>
+        <div class="blog-card-content">
+            <h3 class="blog-title"><a href="just-in-time.html">Just in Time: Produção no Momento Certo</a></h3>
+            <p class="blog-excerpt">Entenda como o sistema JIT revolucionou a indústria mundial, reduzindo estoques e aumentando a eficiência operacional.</p>
+            <div class="blog-meta">
+                <span class="blog-date">12 de Dezembro, 2024</span>
+                <span class="blog-read-time">7 min de leitura</span>
+            </div>
+            <div class="blog-tags">
+                <span class="tag">JIT</span>
+                <span class="tag">Toyota</span>
+                <span class="tag">Estoque</span>
+            </div>
+        </div>
+    </article>
 
-                    <article class="blog-card" data-category="ferramentas">
-                        <div class="blog-card-header">
-                            <div class="blog-icon">📋</div>
-                            <span class="blog-category">Ferramentas</span>
-                        </div>
-                        <h3 class="blog-title">
-                            <a href="kanban.html">Kanban: Visualizando o Fluxo de Trabalho</a>
-                        </h3>
-                        <p class="blog-excerpt">Aprenda a implementar o sistema Kanban para gerenciar projetos de forma visual e identificar gargalos no processo.</p>
-                        <div class="blog-meta">
-                            <span class="blog-date">10 de Dezembro, 2025</span>
-                            <span class="blog-read-time">6 min de leitura</span>
-                        </div>
-                        <div class="blog-tags">
-                            <span class="tag">Kanban</span>
-                            <span class="tag">Visual</span>
-                            <span class="tag">Gestão</span>
-                        </div>
-                    </article>
+    <!-- Kanban -->
+    <article class="blog-card" data-category="ferramentas">
+        <img src="imagens/kanban.jpeg" alt="Kanban" class="blog-card-image">
+        <div class="blog-card-header">
+            <span class="blog-category">Ferramentas</span>
+            <div class="blog-icon">📋</div>
+        </div>
+        <div class="blog-card-content">
+            <h3 class="blog-title"><a href="kanban.html">Kanban: Visualizando o Fluxo de Trabalho</a></h3>
+            <p class="blog-excerpt">Aprenda a implementar o sistema Kanban para gerenciar projetos de forma visual e identificar gargalos no processo.</p>
+            <div class="blog-meta">
+                <span class="blog-date">10 de Dezembro, 2024</span>
+                <span class="blog-read-time">6 min de leitura</span>
+            </div>
+            <div class="blog-tags">
+                <span class="tag">Kanban</span>
+                <span class="tag">Visual</span>
+                <span class="tag">Gestão</span>
+            </div>
+        </div>
+    </article>
 
-                    <article class="blog-card" data-category="metodologias">
-                        <div class="blog-card-header">
-                            <div class="blog-icon">📈</div>
-                            <span class="blog-category">Metodologias</span>
-                        </div>
-                        <h3 class="blog-title">
-                            <a href="kaizen.html">Kaizen: A Filosofia da Melhoria Contínua</a>
-                        </h3>
-                        <p class="blog-excerpt">Explore como a filosofia Kaizen pode transformar sua organização através de pequenas melhorias constantes e envolvimento de todos.</p>
-                        <div class="blog-meta">
-                            <span class="blog-date">8 de Dezembro, 2025</span>
-                            <span class="blog-read-time">8 min de leitura</span>
-                        </div>
-                        <div class="blog-tags">
-                            <span class="tag">Kaizen</span>
-                            <span class="tag">Melhoria</span>
-                            <span class="tag">Cultura</span>
-                        </div>
-                    </article>
+    <!-- Kaizen -->
+    <article class="blog-card" data-category="metodologias">
+        <img src="imagens/kaizen.jpeg" alt="Kaizen" class="blog-card-image">
+        <div class="blog-card-header">
+            <span class="blog-category">Metodologias</span>
+            <div class="blog-icon">📈</div>
+        </div>
+        <div class="blog-card-content">
+            <h3 class="blog-title"><a href="kaizen.html">Kaizen: A Filosofia da Melhoria Contínua</a></h3>
+            <p class="blog-excerpt">Explore como a filosofia Kaizen pode transformar sua organização através de pequenas melhorias constantes e envolvimento de todos.</p>
+            <div class="blog-meta">
+                <span class="blog-date">8 de Dezembro, 2024</span>
+                <span class="blog-read-time">8 min de leitura</span>
+            </div>
+            <div class="blog-tags">
+                <span class="tag">Kaizen</span>
+                <span class="tag">Melhoria</span>
+                <span class="tag">Cultura</span>
+            </div>
+        </div>
+    </article>
 
-                    <article class="blog-card" data-category="ferramentas">
-                        <div class="blog-card-header">
-                            <div class="blog-icon">🧹</div>
-                            <span class="blog-category">Ferramentas</span>
-                        </div>
-                        <h3 class="blog-title">
-                            <a href="5s.html">5S: Organizando o Ambiente de Trabalho</a>
-                        </h3>
-                        <p class="blog-excerpt">Descubra como a metodologia 5S pode transformar seu ambiente de trabalho, aumentando produtividade e qualidade.</p>
-                        <div class="blog-meta">
-                            <span class="blog-date">5 de Dezembro, 2025</span>
-                            <span class="blog-read-time">6 min de leitura</span>
-                        </div>
-                        <div class="blog-tags">
-                            <span class="tag">5S</span>
-                            <span class="tag">Organização</span>
-                            <span class="tag">Produtividade</span>
-                        </div>
-                    </article>
+    <!-- 5S -->
+    <article class="blog-card" data-category="ferramentas">
+        <img src="imagens/5s.jpeg" alt="5S" class="blog-card-image">
+        <div class="blog-card-header">
+            <span class="blog-category">Ferramentas</span>
+            <div class="blog-icon">🧹</div>
+        </div>
+        <div class="blog-card-content">
+            <h3 class="blog-title"><a href="5s.html">5S: Organizando o Ambiente de Trabalho</a></h3>
+            <p class="blog-excerpt">Descubra como a metodologia 5S pode transformar seu ambiente de trabalho, aumentando produtividade e qualidade.</p>
+            <div class="blog-meta">
+                <span class="blog-date">5 de Dezembro, 2024</span>
+                <span class="blog-read-time">6 min de leitura</span>
+            </div>
+            <div class="blog-tags">
+                <span class="tag">5S</span>
+                <span class="tag">Organização</span>
+                <span class="tag">Produtividade</span>
+            </div>
+        </div>
+    </article>
 
-                    <article class="blog-card" data-category="conceitos">
-    <div class="blog-card-header">
-        <div class="blog-icon">📦</div>
-        <span class="blog-category">Conceitos</span>
-    </div>
-    <h3 class="blog-title">
-        <a href="Cadeia_de_Suprimentos.html">Cadeia de Suprimentos: Conceitos Fundamentais</a>
-    </h3>
-    <p class="blog-excerpt">Compreenda a rede interconectada de organizações e processos que movem produtos do fornecedor ao cliente final.</p>
-    <div class="blog-meta">
-        <span class="blog-date">20 de Dezembro, 2024</span>
-        <span class="blog-read-time">8 min de leitura</span>
-    </div>
-    <div class="blog-tags">
-        <span class="tag">SCM</span>
-        <span class="tag">Suprimentos</span>
-        <span class="tag">Logística</span>
-    </div>
-</article>
+    <!-- Cadeia de Suprimentos -->
+    <article class="blog-card" data-category="conceitos">
+        <img src="imagens/cadeiadesuprimentos.jpeg" alt="Cadeia de Suprimentos" class="blog-card-image">
+        <div class="blog-card-header">
+            <span class="blog-category">Conceitos</span>
+            <div class="blog-icon">📦</div>
+        </div>
+        <div class="blog-card-content">
+            <h3 class="blog-title"><a href="Cadeia_de_Suprimentos.html">Cadeia de Suprimentos: Conceitos Fundamentais</a></h3>
+            <p class="blog-excerpt">Compreenda a rede interconectada de organizações e processos que movem produtos do fornecedor ao cliente final.</p>
+            <div class="blog-meta">
+                <span class="blog-date">20 de Dezembro, 2024</span>
+                <span class="blog-read-time">8 min de leitura</span>
+            </div>
+            <div class="blog-tags">
+                <span class="tag">SCM</span>
+                <span class="tag">Suprimentos</span>
+                <span class="tag">Logística</span>
+            </div>
+        </div>
+    </article>
 
-                    <article class="blog-card" data-category="conceitos">
-    <div class="blog-card-header">
-        <div class="blog-icon">💰</div>
-        <span class="blog-category">Conceitos</span>
-    </div>
-    <h3 class="blog-title">
-        <a href="compras.html">Compras Estratégicas: Do Operacional ao Estratégico</a>
-    </h3>
-    <p class="blog-excerpt">Descubra como a área de compras evoluiu para se tornar um pilar estratégico fundamental nas organizações.</p>
-    <div class="blog-meta">
-        <span class="blog-date">18 de Dezembro, 2024</span>
-        <span class="blog-read-time">10 min de leitura</span>
-    </div>
-    <div class="blog-tags">
-        <span class="tag">Compras</span>
-        <span class="tag">Estratégia</span>
-        <span class="tag">Fornecedores</span>
-    </div>
-</article>
+    <!-- Compras Estratégicas -->
+    <article class="blog-card" data-category="conceitos">
+        <img src="imagens/compras.jpeg" alt="Compras Estratégicas" class="blog-card-image">
+        <div class="blog-card-header">
+            <span class="blog-category">Conceitos</span>
+            <div class="blog-icon">💰</div>
+        </div>
+        <div class="blog-card-content">
+            <h3 class="blog-title"><a href="compras.html">Compras Estratégicas: Do Operacional ao Estratégico</a></h3>
+            <p class="blog-excerpt">Descubra como a área de compras evoluiu para se tornar um pilar estratégico fundamental nas organizações.</p>
+            <div class="blog-meta">
+                <span class="blog-date">18 de Dezembro, 2024</span>
+                <span class="blog-read-time">10 min de leitura</span>
+            </div>
+            <div class="blog-tags">
+                <span class="tag">Compras</span>
+                <span class="tag">Estratégia</span>
+                <span class="tag">Fornecedores</span>
+            </div>
+        </div>
+    </article>
 
-                <article class="blog-card" data-category="operacoes">
-    <div class="blog-card-header">
-        <div class="blog-icon">📦</div>
-        <span class="blog-category">Operações</span>
-    </div>
-    <h3 class="blog-title">
-        <a href="recebimentos_materiais.html">Recebimento de Materiais: Elimine o "Achismo"</a>
-    </h3>
-    <p class="blog-excerpt">Chega de "achismo" e café frio! Transforme seu recebimento de mercadorias em um espetáculo de produtividade com nossas dicas práticas.</p>
-    <div class="blog-meta">
-        <span class="blog-date">25 de Dezembro, 2024</span>
-        <span class="blog-read-time">10 min de leitura</span>
-    </div>
-    <div class="blog-tags">
-        <span class="tag">Recebimento</span>
-        <span class="tag">CD</span>
-        <span class="tag">Conferência</span>
-    </div>
-</article>
-                </div>
-
+    <!-- Recebimento de Materiais -->
+    <article class="blog-card" data-category="operacoes">
+        <img src="imagens/recebimento.jpeg" alt="Recebimento de Materiais" class="blog-card-image">
+        <div class="blog-card-header">
+            <span class="blog-category">Operações</span>
+            <div class="blog-icon">📦</div>
+        </div>
+        <div class="blog-card-content">
+            <h3 class="blog-title"><a href="recebimentos_materiais.html">Recebimento de Materiais: Elimine o "Achismo"</a></h3>
+            <p class="blog-excerpt">Chega de "achismo" e café frio! Transforme seu recebimento de mercadorias em um espetáculo de produtividade com nossas dicas práticas.</p>
+            <div class="blog-meta">
+                <span class="blog-date">25 de Dezembro, 2024</span>
+                <span class="blog-read-time">10 min de leitura</span>
+            </div>
+            <div class="blog-tags">
+                <span class="tag">Recebimento</span>
+                <span class="tag">CD</span>
+                <span class="tag">Conferência</span>
+            </div>
+        </div>
+    </article>
+</div>
                 <div class="blog-sidebar">
                     <div class="sidebar-widget">
                         <h4>Conteúdos Populares</h4>
@@ -294,6 +310,8 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
+
 
 <div vw class="enabled">
     <div vw-access-button class="active"></div>
