--- a/equipe.html
+++ b/equipe.html
@@ -58,7 +58,7 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="samuel.jpeg" alt="Samuel - Criativo e Inovador">
+                            <img src="imagens/samuel.jpeg" alt="Samuel - Criativo e Inovador">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Samuel</h3>
@@ -85,7 +85,7 @@
 
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="kemilyn.jpeg" alt="Kemely - Estrategista e Conteudista">
+                            <img src="imagens/kemilyn.jpeg" alt="Kemely - Estrategista e Conteudista">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Kemilyn</h3>
@@ -112,7 +112,7 @@
 
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="joao.jpeg" alt="João Pedro Dias - Técnico e Executador">
+                            <img src="imagens/joao.jpeg" alt="João Pedro Dias - Técnico e Executador">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">João Pedro Dias</h3>
