--- a/equipe.html
+++ b/equipe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipe - MoviLink</title>
-    <link rel="icon" type="imagens/x-icon" href=logo.png>
+    <link rel="icon" type="image/x-icon" href="logo.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -13,9 +13,10 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                <a href="index.html">
-                    <img src="logo.png" alt="MoviLink Logo" class="logo-image">
-                    <h1>MoviLink</h1>
+                    <a href="index.html">
+                        <img src="logo.png" alt="MoviLink Logo" class="logo-image">
+                        <h1>MoviLink</h1>
+                    </a>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
@@ -41,57 +42,55 @@
     </header>
 
     <main>
-        <section class="page-hero">
-            <div class="container">
-                <h1 class="page-title">Nossa Equipe</h1>
-                <p class="page-subtitle">Conheça os profissionais por trás do MoviLink</p>
+        <section class="page-hero hero-modern">
+            <div class="hero-shapes">
+                <div class="shape shape-1"></div>
+                <div class="shape shape-2"></div>
+            </div>
+            <div class="container" style="position: relative; z-index: 2;">
+                <h1 class="page-title reveal-up">Nossa Equipe</h1>
+                <p class="page-subtitle reveal-up stagger-1">Conheça os profissionais por trás do MoviLink</p>
             </div>
         </section>
 
         <section class="team-section">
             <div class="container">
-                <div class="team-intro">
+                <div class="team-intro reveal-up">
                     <h2>Quem Somos</h2>
                     <p>Nossa equipe multidisciplinar combina criatividade, estratégia e execução técnica para criar conteúdos educativos de alta qualidade sobre logística. Cada membro traz sua expertise única para tornar o conhecimento logístico mais acessível e compreensível.</p>
                 </div>
 
                 <div class="team-grid">
-                    <div class="team-member">
+                    <div class="team-member card-modern reveal-up stagger-1">
                         <div class="member-photo">
-                            <img src="imagens/samuel.jpeg" alt="Samuel - Criativo e Inovador">
+                            <img src="imagens/samuel.jpeg" alt="Samuel - Criativo e Inovador" style="border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Samuel</h3>
                             <p class="member-role">Criativo e Inovador</p>
                             <div class="member-description">
-                                <p>Meu nome é Samuel Silva, tenho 20 anos e sou estudante do curso técnico em Administração no SENAI. Faço parte do grupo Movilink, onde contribuo com inovação e criatividade para o blog, sempre buscando compartilhar conteúdos relevantes sobre logística integrada e gestão de processos.</p>
+                                <p>Meu nome é Samuel Silva, tenho 20 anos e sou estudante do curso técnico em Administração no SENAI. Faço parte do grupo Movilink, onde contribuo com inovação e criatividade.</p>
                             </div>
                             <div class="member-responsibilities">
                                 <h4>Principais Responsabilidades:</h4>
                                 <ul>
-                                    <li>Desenvolvimento de conceitos criativos para conteúdos</li>
-                                    <li>Design de experiências de aprendizagem inovadoras</li>
-                                    <li>Criação de elementos visuais e gráficos</li>
-                                    <li>Ideação de formatos multimodais de conteúdo</li>
-                                    <li>Pesquisa de tendências em educação digital</li>
+                                    <li>Desenvolvimento de conceitos criativos</li>
+                                    <li>Design de experiências de aprendizagem</li>
+                                    <li>Criação de elementos visuais</li>
                                 </ul>
-                            </div>
-                            <div class="member-story">
-                                <h4>História:</h4>
-                                <p>Com formação em Design e experiência em projetos educacionais, Samuel sempre acreditou que o aprendizado deve ser uma experiência prazerosa e memorável. Sua jornada no MoviLink começou com a visão de revolucionar a forma como conceitos logísticos são apresentados ao público.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="team-member">
+                    <div class="team-member card-modern reveal-up stagger-2">
                         <div class="member-photo">
-                            <img src="imagens/kemilyn.jpeg" alt="Kemely - Estrategista e Conteudista">
+                            <img src="imagens/kemilyn.jpeg" alt="Kemely - Estrategista e Conteudista" style="border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">Kemilyn</h3>
                             <p class="member-role">Estrategista e Conteudista</p>
                             <div class="member-description">
-                                <p>Kemilyn é a mente estratégica por trás do MoviLink, especializada em transformar conhecimento acadêmico em conteúdo acessível e estruturado. Sua expertise em comunicação e pedagogia garante que cada material seja educativo e envolvente.</p>
+                                <p>Kemilyn é a mente estratégica por trás do MoviLink, especializada em transformar conhecimento acadêmico em conteúdo acessível e estruturado.</p>
                             </div>
                             <div class="member-responsibilities">
                                 <h4>Principais Responsabilidades:</h4>
@@ -99,67 +98,55 @@
                                     <li>Planejamento estratégico de conteúdos</li>
                                     <li>Pesquisa e curadoria de informações</li>
                                     <li>Redação e edição de artigos educativos</li>
-                                    <li>Desenvolvimento de metodologias de ensino</li>
-                                    <li>Análise de métricas e feedback dos usuários</li>
                                 </ul>
-                            </div>
-                            <div class="member-story">
-                                <h4>História:</h4>
-                                <p>Kemilyn possui sólida formação em Comunicação e Pedagogia, com especialização em educação digital. Sua paixão por ensinar e comunicar de forma clara a levou ao MoviLink, onde pode combinar sua expertise em conteúdo com seu interesse pela área logística.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="team-member">
+                    <div class="team-member card-modern reveal-up stagger-3">
                         <div class="member-photo">
-                            <img src="imagens/joao.jpeg" alt="João Pedro Dias - Técnico e Executador">
+                            <img src="imagens/joao.jpeg" alt="João Pedro Dias - Técnico e Executador" style="border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
                         </div>
                         <div class="member-info">
                             <h3 class="member-name">João Pedro Dias</h3>
-                            <p class="member-role">Técnico e Execudor</p>
+                            <p class="member-role">Técnico e Executor</p>
                             <div class="member-description">
-                                <p>João Pedro é o especialista técnico da equipe, responsável por transformar ideias em realidade digital. Sua expertise em desenvolvimento web e tecnologias educacionais garante que a plataforma MoviLink seja robusta, acessível e funcional.</p>
+                                <p>João Pedro é o especialista técnico da equipe, responsável por transformar ideias em realidade digital, garantindo que a plataforma seja robusta e funcional.</p>
                             </div>
                             <div class="member-responsibilities">
                                 <h4>Principais Responsabilidades:</h4>
                                 <ul>
-                                    <li>Desenvolvimento e manutenção da plataforma web</li>
+                                    <li>Desenvolvimento da plataforma web</li>
                                     <li>Implementação de recursos interativos</li>
-                                    <li>Otimização de performance e acessibilidade</li>
-                                    <li>Integração de ferramentas e tecnologias</li>
-                                    <li>Suporte técnico e resolução de problemas</li>
+                                    <li>Otimização de performance</li>
                                 </ul>
-                            </div>
-                            <div class="member-story">
-                                <h4>História:</h4>
-                                <p>João Pedro é formado em Tecnologia da Informação com especialização em desenvolvimento web. Sua experiência em projetos educacionais digitais e paixão por tecnologias inovadoras o trouxeram ao MoviLink, onde pode aplicar seus conhecimentos técnicos para democratizar o ensino de logística.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="team-values">
-                    <h2>Nossos Valores</h2>
+                    <h2 class="reveal-up" style="margin-top: 60px;">Nossos Valores</h2>
                     <div class="values-grid">
-                        <div class="value-item">
+                        <div class="value-item card-modern reveal-up stagger-1">
                             <div class="value-icon">🎯</div>
                             <h4>Excelência Educativa</h4>
-                            <p>Comprometemo-nos a criar conteúdos de alta qualidade que realmente façam a diferença no aprendizado.</p>
+                            <p>Conteúdos de alta qualidade que fazem a diferença.</p>
                         </div>
-                        <div class="value-item">
+                        <div class="value-item card-modern reveal-up stagger-2">
                             <div class="value-icon">🤝</div>
                             <h4>Colaboração</h4>
-                            <p>Acreditamos que o trabalho em equipe e a troca de conhecimentos são fundamentais para o sucesso.</p>
+                            <p>Trabalho em equipe e troca de conhecimentos.</p>
                         </div>
-                        <div class="value-item">
+                        <div class="value-item card-modern reveal-up stagger-3">
                             <div class="value-icon">💡</div>
                             <h4>Inovação</h4>
-                            <p>Buscamos constantemente novas formas de apresentar e ensinar conceitos logísticos.</p>
+                            <p>Novas formas de ensinar conceitos logísticos.</p>
                         </div>
-                        <div class="value-item">
+                        <div class="value-item card-modern reveal-up stagger-4">
                             <div class="value-icon">🌍</div>
                             <h4>Acessibilidade</h4>
-                            <p>Nosso objetivo é tornar o conhecimento logístico acessível a todos, independente do nível de experiência.</p>
+                            <p>Conhecimento logístico acessível a todos.</p>
                         </div>
                     </div>
                 </div>
@@ -186,11 +173,11 @@
                 <div class="footer-section">
                     <h4>Temas</h4>
                     <ul>
-                        <li><a href="posts/logistica-integrada.html">Logística Integrada</a></li>
-                        <li><a href="posts/just-in-time.html">Just in Time</a></li>
-                        <li><a href="posts/kanban.html">Kanban</a></li>
-                        <li><a href="posts/kaizen.html">Kaizen</a></li>
-                        <li><a href="posts/5s.html">5S</a></li>
+                        <li><a href="logistica-integrada.html">Logística Integrada</a></li>
+                        <li><a href="just-in-time.html">Just in Time</a></li>
+                        <li><a href="kanban.html">Kanban</a></li>
+                        <li><a href="kaizen.html">Kaizen</a></li>
+                        <li><a href="5s.html">5S</a></li>
                     </ul>
                 </div>
             </div>
@@ -200,17 +187,17 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
+    <script src="hamburguer.js"></script>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
 </body>
 </html>
-
-<div vw class="enabled">
-    <div vw-access-button class="active"></div>
-    <div vw-plugin-wrapper>
-        <div class="vw-plugin-top-wrapper"></div>
-    </div>
-</div>
-<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-<script>
-    new window.VLibras.Widget ( 'https://vlibras.gov.br/app' );
-</script>
