Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="index.html">
-                        <img src="logo.png" alt="MoviLink Logo" class="logo-image">
+                        <img src="imagens/logo.png" alt="MoviLink Logo" class="logo-image">
                         <h1>MoviLink</h1>
                     </a>
                 </div>
